feat: Integrate AI Impact Analysis Assistant with Google Gemini API
- Added AI Impact Analysis Assistant documentation (AI_ASSISTANT.md) detailing setup, features, usage, and API architecture.
- Implemented API route for impact analysis (route.ts) to handle requests and responses with Gemini API.
- Developed AIAssistant component (AIAssistant.tsx) for user interaction and displaying analysis results.
- Created gemini-api.ts for managing Gemini API interactions, including prompt engineering and reverse geocoding.
- Updated package.json to include dependencies for Google Generative AI and React Markdown.

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
